# viennacl-dev

./: .gitignore  .gitmodules  CMakeLists.txt  README-PyViennaCL  bench.py  sched.py  setup.py.in
GSoC/: viennacl-gsoc-proposal.org
cmake/: CMakeLists.txt.in.src  FindOpenCL.cmake  ViennaCLCommon.cmake
debian/: changelog  control  rules
doc/: conf.py  index.rst
doc/examples/: index.rst
examples/: CMakeLists.txt  basics.py  iterative-solvers.py  mat65k.mtx  output  sparse-matrices.py  util.py
examples/pyviennacl/: CMakeLists.txt  bugfix.cpp
examples/tutorial/: CMakeLists.txt  bugfix.cpp
pyviennacl/: CMakeLists.txt  setup.py.in
pyviennacl/debian/: changelog  control  rules
pyviennacl/doc/: conf.py  index.rst  linalg.rst  pycore.rst  util.rst
pyviennacl/src/: _puzzle.cpp  _viennacl.cpp  _viennacl.h  _viennacl_compressed_matrix.cpp  _viennacl_coordinate_matrix.cpp  _viennacl_dense_matrix_double.cpp  _viennacl_dense_matrix_float.cpp  _viennacl_dense_matrix_int.cpp  _viennacl_dense_matrix_long.cpp  _viennacl_dense_matrix_uint.cpp  _viennacl_dense_matrix_ulong.cpp  _viennacl_eig.cpp  _viennacl_ell_matrix.cpp  _viennacl_extemp.cpp  _viennacl_extra_functions.cpp  _viennacl_hyb_matrix.cpp  _viennacl_null.cpp  _viennacl_numpy.cpp  _viennacl_rvalue.cpp  _viennacl_scheduler.cpp  _viennacl_vector_double.cpp  _viennacl_vector_float.cpp  _viennacl_vector_int.cpp  _viennacl_vector_long.cpp  _viennacl_vector_uint.cpp  _viennacl_vector_ulong.cpp  test.cpp
pyviennacl/src/_viennacl/: __init__.py  compressed_matrix.cpp  coordinate_matrix.cpp  core.cpp  dense_matrix.h  dense_matrix_ulong.cpp  eig.cpp  ell_matrix.cpp  hyb_matrix.cpp  scheduler.cpp  sparse_matrix.h  vector.h  vector_float.cpp  vector_uint.cpp
pyviennacl/src/pyviennacl/: __init__.py  core.py  linalg.py  numpy.new.py  numpy.py  pycore.py  util.py
src/_viennacl/: compressed_matrix.cpp  coordinate_matrix.cpp  core.cpp  dense_matrix.h  dense_matrix_double.cpp  dense_matrix_float.cpp  dense_matrix_int.cpp  dense_matrix_long.cpp  dense_matrix_uint.cpp  ell_matrix.cpp  extra_functions.cpp  hyb_matrix.cpp  iterative_solvers.cpp  iterative_solvers.hpp  scheduler.h  solve_op_func.hpp  sparse_matrix.h  vector.h  vector_double.cpp  vector_int.cpp  vector_long.cpp  vector_ulong.cpp  viennacl.h
src/pyviennacl/: __init__.py  linalg.py  pycore.py  vclmath.py
tests/: CMakeLists.txt  bugfix.py  scalar_operations.py  vector_operations.py
tests/pyviennacl/: CMakeLists.txt  blas3_prod.py  blas3_solve.py  matrix_operations.py  test_common.py  vector_operations.py
tests/src/: pyviennacl-puzzle.py
viennacl/: matrix_proxy.hpp  vector.hpp  vector_proxy.hpp
viennacl/backend/: memory.hpp
viennacl/generator/: generate_scalar_reduction.hpp
viennacl/scheduler/: execute_matrix_dispatcher.hpp  io.hpp
viennacl/tools/: shared_ptr.hpp
